# mdns

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  chromecast_discovery.rs  http_discovery.rs  hue_bridge_discovery.rs  resolve_hosts.rs
src/: discover.rs  errors.rs  io.rs  lib.rs  mdns.rs  resolve.rs  response.rs  runtime.rs
src/runtime/: async_std.rs  tokio.rs
