[package]
name = "mdns"
version = "0.3.1"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = """
A multicast DNS client library.

Supports discovery of any mDNS device on a LAN.
"""

license = "MIT"
documentation = "https://docs.rs/mdns"
repository = "https://github.com/dylanmckay/mdns"

categories = ["network-programming"]
keywords = ["mdns", "dns", "multicast", "chromecast", "discovery"]

[dependencies]
mio = "0.6"
dns-parser = "0.8"
net2 = "0.2"
error-chain = "0.12"
get_if_addrs = "0.5.3"
