[package]
name = "mdns"
version = "1.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = """
A multicast DNS client library.

Supports discovery of any mDNS device on a LAN.
"""

license = "MIT"
documentation = "https://docs.rs/mdns"
repository = "https://github.com/dylanmckay/mdns"

categories = ["network-programming"]
keywords = ["mdns", "dns", "multicast", "chromecast", "discovery"]

[dependencies]
dns-parser = "0.8.0"
net2 = "0.2"
err-derive = "0.2.1"
futures-core = "0.3.1"
futures-util = "0.3.1"
async-stream = "0.2.0"
async-std = { version = "1.7.0", features = ["unstable"] }

[dev-dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
