[package]
name = "mdns2"
version = "3.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>", "Carsten Csiky <github@csicar.de>"]
edition = "2018"

description = """
A multicast DNS client library.

Supports discovery of any mDNS device on a LAN.
"""

license = "MIT"
documentation = "https://docs.rs/mdns2"
repository = "https://github.com/csicar/mdns2"

categories = ["network-programming"]
keywords = ["mdns", "dns", "multicast", "chromecast", "discovery", "dns-sd"]

[dependencies]
dns-parser = "0.8.0"
net2 = "0.2"
err-derive = "0.2.1"
futures-core = "0.3.1"
futures-util = "0.3.1"
log = "0.4"
async-stream = "0.2.0"
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
